<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <cn.edu.zust.dmt.hsy.common_module.views.combined.cm_MyTopBar
        android:id="@+id/em_activity_register_my_top_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cm_myTopBarLeftIcon="@drawable/cm_icon_universal_back"
        app:cm_myTopBarTitle="@string/em_string_universal_register"
        app:layout_constraintDimensionRatio="8:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <cn.edu.zust.dmt.hsy.common_module.views.combined.cm_MyFormBar
        android:id="@+id/em_activity_register_voucher_my_form_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/em_dimen_universal_form_margin_top"
        app:cm_myFormBarHint="@string/em_string_universal_voucher_hint"
        app:cm_myFormBarTitle="@string/em_string_universal_voucher"
        app:layout_constraintDimensionRatio="8:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/em_activity_register_my_top_bar" />

    <cn.edu.zust.dmt.hsy.common_module.views.combined.cm_MyFormBar
        android:id="@+id/em_activity_register_password_my_form_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/em_dimen_universal_form_margin_top"
        app:cm_myFormBarHint="@string/em_string_universal_password_hint"
        app:cm_myFormBarTitle="@string/em_string_universal_password"
        app:layout_constraintDimensionRatio="8:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/em_activity_register_voucher_my_form_bar" />

    <cn.edu.zust.dmt.hsy.common_module.views.combined.cm_MyFormBar
        android:id="@+id/em_activity_register_password_repeat_my_form_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/em_dimen_universal_form_margin_top"
        app:cm_myFormBarHint="@string/em_string_register_password_repeat_hint"
        app:cm_myFormBarTitle="@string/em_string_register_password_repeat"
        app:layout_constraintDimensionRatio="8:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/em_activity_register_password_my_form_bar" />

    <Button
        android:id="@+id/em_activity_register_confirm_button"
        style="@style/cm_style_universal_button_normal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="@dimen/em_dimen_universal_form_button_margin_top"
        android:background="@color/cm_color_universal_app_theme_color"
        android:text="@string/em_string_universal_register"
        android:textColor="@color/cm_color_universal_foreground"
        app:layout_constraintDimensionRatio="8:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/em_activity_register_password_repeat_my_form_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>